Latest scripts for new book